# msx

./: Cargo.toml  LICENSE  README.md
.github/pages/: generate_report.py
.github/workflows/: buid-deploy.yml
.mdix/: .manifest.mdix
.mdix/project_structure/: project_structure.mdix
benches/: compare.rs
docs/: format-spec.md  msx-dixscript.md
examples/: basic_shapes.msx  gradients.msx  parametric.msx  path_demo.msx
scripts/: gen_corpus.sh  verify_corpus.sh
src/: ast.rs  color.rs  compiler.rs  decoder.rs  encoder.rs  header.rs  lib.rs  main.rs  parser.rs  path.rs  primitives.rs  renderer.rs  style.rs  transform.rs
tests/: roundtrip.rs
